<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.cubrid.cubridmanager</groupId>
    <artifactId>cubridmanager</artifactId>
    <version>9.3.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    
    <modules>
        <module>plugins</module>
        <module>testfragment</module>
        <module>features</module>
        <module>site</module>
        <module>product</module>
    </modules>
  
    <properties>
        <tools-name>cubridadmin</tools-name>
        <cubridtools-product>Cubrid-Manager</cubridtools-product>
        <tycho-version>4.0.13</tycho-version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
    </properties>
  
    <repositories>
        <repository>
            <id>eclipse-p2-repo</id>
            <url>https://download.eclipse.org/releases/2025-03/</url>
            <layout>p2</layout>
        </repository>
        <repository>
            <id>manager-gef</id>
            <layout>p2</layout>
            <url>https://download.eclipse.org/tools/gef/classic/release/3.20.0</url>
        </repository>
        <repository>
            <id>manager-local-p2</id>
            <url>https://ftp.cubrid.org/CUBRID_Tools/Dev/sites/rcp/cubridmanager/p2-site/</url>
            <layout>p2</layout>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
          <groupId>org.eclipse.platform</groupId>
          <artifactId>org.eclipse.equinox.security</artifactId>
          <version>1.3.0</version>
        </dependency>
        <dependency>
          <groupId>org.eclipse.platform</groupId>
          <artifactId>org.eclipse.equinox.p2.metadata</artifactId>
          <version>2.3.100</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-embedder</artifactId>
            <version>3.6.3</version>
            <exclusions>
            	<exclusion>
            		<groupId>org.slf4j</groupId>
            		<artifactId>slf4j-api</artifactId>
            	</exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-compat</artifactId>
            <version>3.6.3</version>
            <exclusions>
            	<exclusion>
            		<groupId>org.slf4j</groupId>
            		<artifactId>slf4j-api</artifactId>
            	</exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.ant</groupId>
            <artifactId>ant</artifactId>
            <version>1.10.12</version>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>${project.basedir}/src</sourceDirectory>
        <testSourceDirectory>${project.basedir}/tests</testSourceDirectory>
        <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-resources-plugin</artifactId>
              <version>2.6</version>
              <configuration>
                  <resources>
                  </resources>
              </configuration>
            </plugin>

            <!-- Tycho build -->
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                  <environments>
                    <environment>
                      <os>win32</os>
                      <ws>win32</ws>
                      <arch>x86_64</arch>
                    </environment>
                    <environment>
                      <os>linux</os>
                      <ws>gtk</ws>
                      <arch>x86_64</arch>
                    </environment>
                    <environment>
                      <os>linux</os>
                      <ws>gtk</ws>
                      <arch>aarch64</arch>
                    </environment>
                    <environment>
                      <os>macosx</os>
                      <ws>cocoa</ws>
                      <arch>x86_64</arch>
                    </environment>
                    <environment>
                      <os>macosx</os>
                      <ws>cocoa</ws>
                      <arch>aarch64</arch>
                    </environment>
                  </environments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho-version}</version>
                <extensions>true</extensions>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-compiler-plugin</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <useProjectSettings>false</useProjectSettings>
                    <source>21</source>
                    <target>21</target>
                    <compilerVersion>21</compilerVersion>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-packaging-plugin</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Built-By>com.cubrid</Built-By>
                            <Created-By>com.cubrid</Created-By>
                            <Build-Time>${maven.build.timestamp}</Build-Time>
                        </manifestEntries>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                </configuration>
            </plugin>

        </plugins>
    </build>
      
    <profiles>
        <profile>
            <id>desktop</id>
            <activation><property><name>!headless-platform</name></property></activation>
            <modules>
                <module>product</module>
            </modules>
        </profile>
        <profile>
            <id>all-platforms</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.eclipse.tycho</groupId>
                        <artifactId>target-platform-configuration</artifactId>
                        <version>${tycho-version}</version>
                        <configuration>
                          <environments>
                                <environment>
                                    <os>win32</os>
                                    <ws>win32</ws>
                                    <arch>x86_64</arch>
                                </environment>
                                <environment>
                                    <os>linux</os>
                                    <ws>gtk</ws>
                                    <arch>x86_64</arch>
                                </environment>
                                <environment>
                                    <os>linux</os>
                                    <ws>gtk</ws>
                                    <arch>aarch64</arch>
                                </environment>
                                <environment>
                                    <os>macosx</os>
                                    <ws>cocoa</ws>
                                    <arch>x86_64</arch>
                                </environment>
                                <environment>
                                    <os>macosx</os>
                                    <ws>cocoa</ws>
                                    <arch>aarch64</arch>
                                </environment>
                            </environments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
     </profiles>
</project>
